CMF 1.5.0rc1 (unreleased)

  New Features

    - CMFDefault utils: Added 'toUnicode' function.
      (http://collector.zope.org/CMF/261)

  Bug Fixes

    - DublinCore: Added 'setCreators' method.
      Note that notifyModified() also modifies creators. If the current user
      should not be added to creators, make sure notifyModified() is not
      called after setCreators().
      (http://collector.zope.org/CMF/61)

    - ZPT skin: Fixed '*metadata_edit_form'.
      Setting "Enable Discussion?" to 'Off' was broken.

    - CMFSetup: Made sure imported values are converted to strings.
      For now imports and exports work only with 'ascii' encoding.
      (http://collector.zope.org/CMF/287)

    - FSPageTemplate: Don't hide sub-tracebacks in development mode.

    - TypesTool: Removed again the "add properties from the ZMI" feature.
      That feature existed only in 1.5.0beta2.

    - ActionProviderBase: Modified exceptions raised by getActionInfo().
      Now Unauthorized is raised if at least one Action was found but the user
      is not allowed to access any of them.

    - RegistrationTool: Generated passwords no longer contain 'OQ0Il1'.

    - The permalink feature is now turned off by default and may be turned
      on by setting the boolean property 'enable_permalink' in the cmfs
      root property sheet through the ZMI. Through the 'get_permalink'
      script the permanent link of an content object can be asked for.
      Additionaly the site may be asked if the permalink feature is turned
      on or not by adding 'isAvailable' instead of an unique id
      (http://www.example.com/permalink/isAvailable). Returns '1' or '0'.
      Also removed the badly designed 'tal:on-error' directive in
      'main_template'.

CMF 1.5.0beta2 (2004/09/27)

  New Features

    - CookieCrumbler: Merged changes from standalone version.
      Cookies set on an HTTPS connection are now marked as secure, meaning
      they will not be transmitted over HTTP.
