@@ -1,6 +1,7 @@
 ## Script (Python) "reconfig"
 ##title=Reconfigure Portal
 ##parameters=
+# this script is deprecated; please use portal_config_control
 REQUEST=context.REQUEST
 context.portal_properties.editProperties(REQUEST)
 return REQUEST.RESPONSE.redirect(context.portal_url() + '/reconfig_form?portal_status_message=CMF+Settings+changed.')
