@@ -1,0 +1,110 @@
+<html metal:use-macro="context/main_template/macros/master">
+<body>
+
+<metal:slot metal:fill-slot="header" i18n:domain="cmf_default">
+<h1 i18n:translate="">Configure the Portal</h1>
+</metal:slot>
+
+<metal:slot metal:fill-slot="main" i18n:domain="cmf_default"
+   tal:define="form options/form">
+<div class="Desktop">
+
+<p i18n:translate="">This form is used to set the portal configuration
+  options.</p>
+
+<form action="reconfig_form" method="post"
+   tal:attributes="action form/action">
+<table class="FormLayout">
+ <tr>
+  <th i18n:translate="">Portal 'From' name</th>
+  <td>
+   <input name="email_from_name" value=""
+      tal:attributes="value form/email_from_name" />
+   <dl class="FieldHelp">
+    <dd i18n:translate="">When the portal generates mail, it uses this name as
+     its (apparent) sender.</dd>
+   </dl>
+  </td>
+ </tr>
+ <tr>
+  <th i18n:translate="">Portal 'From' address</th>
+  <td>
+   <input name="email_from_address" value=""
+      tal:attributes="value form/email_from_address" />
+   <dl class="FieldHelp">
+    <dd i18n:translate="">When the portal generates mail, it uses this address
+     as its (apparent) return address.</dd>
+   </dl>
+  </td>
+ </tr>
+ <tr>
+  <th i18n:translate="">SMTP server</th>
+  <td>
+   <input name="smtp_server" value=""
+      tal:attributes="value form/smtp_server" />
+   <dl class="FieldHelp">
+    <dd i18n:translate="">This is the address of your local SMTP (out-going
+     mail) server.</dd>
+   </dl>
+  </td>
+ </tr>
+ <tr>
+  <th i18n:translate="">Portal title</th>
+  <td>
+   <input name="title" value="" tal:attributes="value form/title" />
+   <dl class="FieldHelp">
+    <dd i18n:translate="">This is the title which appears at the top of every
+     portal page.</dd>
+   </dl>
+  </td>
+ </tr>
+ <tr>
+  <th i18n:translate="">Portal description</th>
+  <td class="TextField">
+   <textarea name="description" rows="6" cols="40" wrap="soft"
+             tal:content="form/description"></textarea>
+   <dl class="FieldHelp">
+    <dd i18n:translate="">This description is made available via syndicated
+     content and elsewhere. It should be fairly brief.</dd>
+   </dl>
+  </td>
+ </tr>
+ <tr>
+  <th i18n:translate="">Password policy</th>
+  <td>
+   <input type="radio" name="validate_email:boolean" value="True"
+      tal:attributes="checked form/validate_email" />
+   <tal:span i18n:translate="">Generate and email members' initial
+    password</tal:span>
+   <br />
+   <input type="radio" name="validate_email:boolean" value="False"
+      tal:attributes="checked not:form/validate_email" />
+   <tal:span i18n:translate="">Allow members to select their initial
+    password</tal:span>
+  </td>
+ </tr>
+ <tr>
+  <th i18n:translate="">Portal default encoding</th>
+  <td>
+   <input name="default_charset" value=""
+      tal:attributes="value form/default_charset" />
+   <dl class="FieldHelp">
+    <dd i18n:translate="">Charset used to decode portal content strings.
+     If empty, 'ascii' is used.</dd>
+   </dl>
+  </td>
+ </tr>
+ <tr>
+  <td>&nbsp;</td>
+  <td>
+   <metal:macro metal:use-macro="context/form_widgets/macros/buttons" />
+  </td>
+ </tr>
+</table>
+</form>
+
+</div>
+</metal:slot>
+
+</body>
+</html>
